[package]
name = "raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
humantime = "2"
linux-embedded-hal = "0.3.2"
bme280-multibus = "0.2.2"
schemars = "0.8.12"
rusqlite = { version = "0.29.0", features = ["bundled"] }
